[master] fix: исправлено формирование csv файлов

--- a/MLFilter/MLTest/MLTest.csproj
+++ b/MLFilter/MLTest/MLTest.csproj
@@ -17,10 +17,10 @@
 
   <ItemGroup>
     <None Update="Data\video_card_test.csv">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="Data\video_card_train.csv">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
